<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/saveRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/pcdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_pcd" />

        <RadioButton
            android:id="@+id/tagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_tag" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/saveNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

</LinearLayout>